<resources>
    <string name="app_name">Another ToDo App</string>

    <string name="password_hint">Password</string>
    <string name="password_hint_repeated">Repeat Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_message2">Passwords are different! Please enter correct credentials!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Sign In</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="log_in_text">Sign In!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="todo_text">Enter your todo text here</string>
    <string name="error_empty_input">Please enter ToDo item !</string>

</resources>
